--- a/docs/docs/03-Input/05-Parser/API.mdx
+++ b/docs/docs/03-Input/05-Parser/API.mdx
@@ -11,7 +11,7 @@ import "github.com/aschey/bubbleprompt/input/parserinput"
  - [type Model](#Model)
      - [func NewModel[T any, G any](parser parser.Parser[G], options ...lexerinput.Option[T]) *Model[T, G]](#NewModel)
 
-#### type Model() {#Model}
+#### type Model {#Model}
 
 ```go
 type Model[T any, G any] struct {
@@ -20,37 +20,37 @@ type Model[T any, G any] struct {
 ```
 
 
-#### func NewModel() {#NewModel}
+#### func NewModel {#NewModel}
 
 ```go
 func NewModel[T any, G any](parser parser.Parser[G], options ...lexerinput.Option[T]) *Model[T, G]
 ```
 
-#### func (*Model[T, G]) Error() {#Error}
+#### func (*Model[T, G]) Error {#Error}
 
 ```go
 func (m *Model[T, G]) Error() error
 ```
 
-#### func (*Model[T, G]) OnUpdateStart() {#OnUpdateStart}
+#### func (*Model[T, G]) OnUpdateStart {#OnUpdateStart}
 
 ```go
 func (m *Model[T, G]) OnUpdateStart(msg tea.Msg) tea.Cmd
 ```
 
-#### func (*Model[T, G]) Parsed() {#Parsed}
+#### func (*Model[T, G]) Parsed {#Parsed}
 
 ```go
 func (m *Model[T, G]) Parsed() *G
 ```
 
-#### func (*Model[T, G]) ParsedBeforeCursor() {#ParsedBeforeCursor}
+#### func (*Model[T, G]) ParsedBeforeCursor {#ParsedBeforeCursor}
 
 ```go
 func (m *Model[T, G]) ParsedBeforeCursor() (*G, error)
 ```
 
-#### func (*Model[T, G]) SetValue() {#SetValue}
+#### func (*Model[T, G]) SetValue {#SetValue}
 
 ```go
 func (m *Model[T, G]) SetValue(value string)
